发现页面修改

--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -47,7 +47,7 @@
                 <a class="bs-type-tab-item" ms-class="bs-text-white: type==1" ms-on-tap="selectType(1)">时租房</a>
             </div>
             <div style="display: inline-block;float: right;" ms-on-tap="goDiscover">
-                <img src="./img/index-btn-rightup.png" alt="" style="    margin-top: 11px;width: 24px;">
+                <img src="./img/discover/discover.png" alt="" style="margin-top: 8px;width: 33px;">
             </div>
         </div>
         
