--- a/css/common.css
+++ b/css/common.css
@@ -1442,3 +1442,41 @@ hr {
     flex-direction: column;
     justify-content: center;
 }
+
+/*账户记录*/
+.card-log, .cms-account {
+    padding: 6vw;
+    min-height: 100vh;
+}
+
+.card-log-head, .cms-account-head {
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 75px;
+    margin-top: 15px;
+    padding: 12px 0 0 20vw;
+}
+
+.card-log-head.zfb, .cms-account-head.zfb  {
+    background-image: url('../img/card/log_zhifubao.png');
+}
+
+.card-log-head.bank, .cms-account-head.bank {
+    background-image: url('../img/card/log_bank.png');
+}
+
+.fr-flex {
+    display: flex !important;
+    justify-content: space-between;
+}
+
+.today-list-item {
+    display: inline-block;
+    padding: 10px 0 2px 0;
+}
+
+.card-no, .cms-account-no {
+    padding-right: 5px;
+}
+
