--- a/js/layout/shell-manage.html
+++ b/js/layout/shell-manage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>本宿酒店管理系统</title>
+    <title>本宿</title>
     <link href="../css/mui.css" rel="stylesheet" />
     <link href="../css/common.css" rel="stylesheet" />
     <!-- css -->
