隐藏午夜特价的广告栏，去掉个人中心弹窗的推广和抽奖，发现的推广先跳到推广申请页面

--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -30,12 +30,12 @@
     </div> 
 
     <!--顶部-->
-    <header id="header-nav" ms-controller="hotel"  class="mui-bar mui-bar-nav mui-text-center" style="height: 80px;background-color:rgba(0,0,0,0.5);padding: 0;">
+    <header id="header-nav" ms-controller="hotel"  class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color:rgba(0,0,0,0.5);padding: 0;">
 
-        <div id="midnight" class="bs-bg-black bs-text-white" style="z-index: 3;width: 100vw;text-align: left;line-height: 32px;" ms-on-tap="goMidnight">
+        <!-- <div id="midnight" class="bs-bg-black bs-text-white" style="z-index: 3;width: 100vw;text-align: left;line-height: 32px;" ms-on-tap="goMidnight">
             <img src="img/midnight.png" alt="" style="width: 24px;float: left;margin: 4px 0 0 8px;">
             &nbsp;<strong>午夜特价房</strong> 震撼来袭！！！<span class="mui-icon mui-icon-closeempty" style="float: right;font-size: 32px;padding: 0px;margin: 0px;" ms-on-tap="closeMidnight"></span>
-        </div>
+        </div> -->
 
         <div style="padding: 0 10px;">
             <div id="menu" style="display: inline-block;float: left;">
