为了让未登录用户可以打开个人中心，开门和退房查询接口不再跳转登陆页 取消av的数据加载样式隐藏，减少首页白屏时间

--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>本宿</title>
     <link href="css/loading.css" rel="stylesheet" />
-
+    <style>
+        .ms-controller, [ms-controller] {
+            display: initial;
+        }   
+    </style>
 </head>
 
 <body class="mui-ios mui-ios-8 mui-ios-8-0">
