--- a/js/layout/shell-index.html
+++ b/js/layout/shell-index.html
@@ -60,7 +60,7 @@
     <div class="mui-content">
         <!-- content -->
     </div>
-    <link href="css/mui.css" rel="stylesheet" />
+    <link href="css/mui.min.css" rel="stylesheet" />
     <link href="css/common.css" rel="stylesheet" />
     <!-- css -->
     <!-- <link href="css/font.css" rel="stylesheet"/>  -->
