--- a/js/layout/shell-av2.html
+++ b/js/layout/shell-av2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>本宿</title>
-    <link href="css/mui.css" rel="stylesheet" />
+    <link href="css/mui.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/common.css">
     <!-- css -->
     <style>
