--- a/css/common.css
+++ b/css/common.css
@@ -1480,3 +1480,18 @@ hr {
     padding-right: 5px;
 }
 
+.mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    background: #000;
+    opacity: 0.7;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    text-align: right;
+    padding: 20px 10vw 0 0;
+}
