梳理邀请好友注册相关页面，改名，优化代码 增加邀请好友称为VIP页面，对接接口 约会基金页面改名 wallet->coupon

--- a/css/common.css
+++ b/css/common.css
@@ -1443,6 +1443,12 @@ hr {
     justify-content: center;
 }
 
+.flex-column-around {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 /*账户记录*/
 .card-log, .cms-account {
     padding: 6vw;
