公益组织详情页面，介绍加滚动条，头像改小； 邀请好友成为VIP页面，小屏文字被遮挡的bug修复

--- a/css/commonweal.css
+++ b/css/commonweal.css
@@ -74,6 +74,8 @@
 .detail-foundation {
     margin: 0 15vw;
     text-align: initial;
+    overflow: scroll;
+    height: 115px;
 }
 
 .detail-left-tab {
@@ -113,8 +115,8 @@
 }
 
 .detail-head {
-    height: 70px;
-    width: 70px;
+    height: 44px;
+    width: 44px;
     border-radius: 50%;
 }
 
