修改下公益学生页面bug，动态圆形页面

--- a/css/commonweal.css
+++ b/css/commonweal.css
@@ -83,7 +83,7 @@
     width: 50%;
     height: 70px;
     background-color: white;
-    padding: 1vh;
+    padding: 12px 1vh;
     border-bottom: 2px solid #baa071;
 }
 
@@ -92,7 +92,7 @@
     width: 50%;
     height: 70px;
     background-color: white;
-    padding: 1vh;
+    padding: 12px 1vh;
     border-bottom: 1px solid #ccc;
 }
 
