--- a/css/card.css
+++ b/css/card.css
@@ -114,6 +114,12 @@
     width: 60%;
 }
 
+.card-discount {
+    font-size: 30px;
+    font-weight: bolder;
+    position: absolute;
+}
+
 .card-cardNo {
     font-size: 1rem;
     display: inline-block;
