--- a/css/card.css
+++ b/css/card.css
@@ -118,6 +118,8 @@
     font-size: 30px;
     font-weight: bolder;
     position: absolute;
+    text-shadow: 0 0 0;
+    color: #eee;
 }
 
 .card-cardNo {
