首页增加底部切换住宿类型栏 首页的 marker 进化，更美观可以与 swiper 互动

--- a/js/layout/top.html
+++ b/js/layout/top.html
@@ -5,17 +5,16 @@
         <img src="img/midnight.png" alt="" style="width: 24px;float: left;margin: 4px 0 0 8px;">
         &nbsp;<strong>午夜特价房</strong> 震撼来袭！！！<span class="mui-icon mui-icon-closeempty" style="float: right;font-size: 32px;padding: 0px;margin: 0px;" ms-on-tap="closeMidnight"></span>
     </div> -->
-    <div style="padding: 0 10px;">
-        <div id="menu" style="display: inline-block;float: left;">
-            <img class="headImg" ms-attr-src="headImg" alt="" style="margin-left: 0;">
+    <div class="bs-header">
+        <div id="menu">
+            <img class="headImg" ms-attr-src="headImg" alt="" style="margin-left: 0;margin-top: 4px;">
         </div>
-        <div class="bs-type-tab">
-            <a class="bs-type-tab-item" ms-class="bs-text-white: vmHotel.type==0" ms-on-tap="selectType(0)">全天房</a>
-            <span> | </span>
-            <a class="bs-type-tab-item" ms-class="bs-text-white: vmHotel.type==1" ms-on-tap="selectType(1)">时租房</a>
+        <div class="bs-bg-white bs-text-153 bs-text-larger bs-search">
+            <img src="../img/icon/search.svg" alt="" style="width: 19px;position: relative;top: 3px;">
+            想去哪里
         </div>
-        <div style="display: inline-block;float: right;" ms-on-tap="goDiscover">
-            <img src="./img/discover/discover.png" alt="" style="margin-top: 8px;width: 33px;">
+        <div ms-on-tap="goDiscover">
+            <img src="../img/discover/discover.png" alt="" style="width: 33px;margin-top: 4px;">
         </div>
     </div>      
 </header>
