--- a/css/common.css
+++ b/css/common.css
@@ -40,9 +40,8 @@ button {
 }
 
 .headImg {
-    width: 36px;
-    height: 36px;
-    margin: 6px;
+    width: 34px;
+    height: 34px;
     border-radius: 50%;
     border: 2px solid white;
 }
@@ -1502,14 +1501,90 @@ hr {
     padding: 20px 10vw 0 0;
 }
 
+/*首页底部*/
 .bs-index-bottom {
     position: fixed;
     z-index: 5;
     bottom: 0;
-    height: 90px;
     width: 100%;
 }
-.bs-index-bottom-tab {
+.bs-index-bottom-title {
+    line-height: 38px;
+    border-bottom: solid 1px #eee;
+    font-size: 12px;
     display: flex;
-    justify-content: space-around;
+    text-align: center;
+    box-shadow: 0 -2px 6px -4px; 
+}
+.bs-index-bottom-title-left {
+    color: #666;
+    flex-grow: 1;
+}
+.bs-index-bottom-title-right {
+    color: #baa071;
+    background-color: #eee;
+    width: 35vw;
+}
+.bs-index-bottom-title-discount {
+    width: 25%;
+    font-size: 16px;
+    color: #baa071;
+    border-left: solid 1px #eee;
+}
+.bs-index-bottom-title-discount-selected {
+    color: white !important;
+    background-color: #baa071;
+    font-weight: bolder;
+}
+.bs-index-bottom-tab {
+    position: fixed;
+    z-index: 9;
+    bottom: 0;
+    width: 100%;
+    padding: 0 14px;
+    display: flex;
+    justify-content: space-between;
+}
+.bs-index-bottom-tab-item {
+    font-size: 13px;
+    padding-top: 55px;
+    padding-bottom: 20px;
+    width: 65px;
+    text-align: center;
+    position: relative;
+}
+.bs-index-bottom-tab-item-icon {
+    background-color: #fff;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    position: absolute;
+    top: 12px;
+    left: 13px;
+    box-shadow: 0px 2px 10px -5px;
+    background-size: 22px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.bs-index-bottom-tab-item-selected {
+    font-size: 11px;
+    display: inline-block;
+    position: relative;
+    top: 3px;
+}
+.bs-header {
+    padding: 0 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 48px;
+}
+.bs-search {
+    flex-grow: 1;
+    margin: 0px 20px;
+    padding-top: 4px;
+    padding-left: 15px;
+    height: 33px;
+    text-align: left;
+    border-radius: 18px;
 }
