--- a/js/layout/index.html
+++ b/js/layout/index.html
@@ -20,19 +20,7 @@
     </div> 
     
     <!--顶部-->
-    <header class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color:rgba(255,255,255,0.9);">
-        <div id="menu" style="display: inline-block;float: left;">
-            <img class="headImg" ms-attr-src="headImg" alt="" style="margin-left: 0;">
-        </div>
-        <div class="bs-type-tab">
-            <a class="bs-type-tab-item" ms-class="bs-text-red: type==0" ms-on-tap="selectType(0)">全天房</a>
-            <span> | </span>
-            <a class="bs-type-tab-item" ms-class="bs-text-red: type==1" ms-on-tap="selectType(1)">时租房</a>
-        </div>
-        <div style="display: inline-block;float: right;" ms-on-tap="goDiscover">
-            <img class="headImg" src="./img/index-btn-rightup.png" alt="" style="margin-right: 0; border-radius: 0;">
-        </div>
-    </header>
+    <!-- top -->
 
     <div id="pullrefresh" class="mui-scroll-wrapper" ms-on-swipeup="su" ms-on-swipedown="sd">
         <div class="mui-scroll">
@@ -99,7 +87,9 @@
     </div>
 
     <!-- content -->
+    <!-- bottom -->
     <!-- pop -->
+
     <script src="js/lib/mui.min.js"></script>
     <script src="js/lib/jquery.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
@@ -110,7 +100,7 @@
     <script src="js/lib/os.js"></script>
     <script src="js/lib/swiper.min.js"></script>
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=0743dafb590f3622f52d0d4218a9f1f7"></script>
-    <script src="js/util/filter.js"></script>
+
     <script src="js/pages/index/index.js"></script>
     <script src="js/util/popOver.js"></script>
     <script src="js/pages/user/my.js"></script>
