--- a/js/layout/shell.html
+++ b/js/layout/shell.html
@@ -8,6 +8,7 @@
     <link href="../css/mui.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/common.css">
     <!-- css -->
+    <script src="../js/lib/mui.min.js"></script>
     <!-- <link href="css/font.css" rel="stylesheet"/> -->
 </head>
 
@@ -18,7 +19,7 @@
         <!-- pop -->
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="../js/lib/jquery.min.js"></script>
-    <script src="../js/lib/mui.min.js"></script>
+    <script src="../js/lib/typed.js"></script>
     <script src="../js/lib/avalon.mobile.shim.min.js"></script>
     <script src="../js/lib/os.js" ></script>
     <script src="../js/domainName.js"></script>
