--- a/js/layout/top.html
+++ b/js/layout/top.html
@@ -12,7 +12,7 @@
         <a href="javascript:history.go(-1);">
             <img src="../img/icon/icon-back.svg" alt="" style="padding-right: 25px;margin-top: 4px;">
         </a>
-        <div class="bs-bg-white bs-text-153 bs-text-smaller bs-search" style="height:28px;background-color: rgba(179,223,219,0.2);margin: 0;border-radius: 2px;">
+        <div class="bs-bg-white bs-text-153 bs-text-smaller bs-search" style="height:28px;background-color: rgba(179,223,219,0.2);margin: 0;border-radius: 2px;" ms-on-tap="openPop">
             <img src="../img/icon/search.svg" alt="" style="width: 19px;position: relative;top: 3px;">
             <span style="position: relative;top: -2px;margin-left: 4px; color: white;">搜索</span>
             <img src="../img/icon/icon-clear.svg" alt="" style="position: absolute;float: right;top: 20px;right: 30px; height: 10px; width: 10px;">
