主要是客服页面修改为动态，样式调整。还有若干以及以前的修改。

--- a/css/common.css
+++ b/css/common.css
@@ -1169,6 +1169,10 @@ hr {
     font-size: 24px;
 }
 
+.bs-text-20 {
+    font-size: 20px;
+}
+
 .bs-text-18 {
     font-size: 18px;
 }
@@ -1177,7 +1181,7 @@ hr {
     font-size: 17px;
 }
 
-.bs-text-large-16 {
+.bs-text-16 {
     font-size: 16px;
 }
 
@@ -1213,17 +1217,13 @@ hr {
     color: #fff !important;
 }
 
-.bs-text-gold {
-    color: #baa071 !important;
-}
-
 .bs-text-yellow {
     color: #ffbc1b !important;
 }
 
-.bs-text-red {
+.bs-text-fdd942 {
     /*color: #b20e15 !important;*/
-    color: #e93b39 !important;
+    color: #fdd942 !important;
 }
 
 .bs-text-gray {
@@ -1232,10 +1232,6 @@ hr {
 
 .bs-text-51 {
     color: #333 !important;
-}
-
-.bs-text-153 {
-    color: #999 !important;
 }
 
 .bs-text-aaa {
@@ -1257,16 +1253,13 @@ hr {
 .bs-text-444 {
     color: #444;
 }
-.bs-text-169488{
-    color: #169488;
+
+.bs-text-eca022 {
+    color: #eca022;
 }
 
-.bs-bg-gold {
-    background-color: #baa071;
-}
-
-.bs-bg-red {
-    background-color: #e93b39;
+.bs-bg-fdd942 {
+    background-color: #fdd942;
 }
 
 .bs-bg-gray {
@@ -1275,10 +1268,6 @@ hr {
 
 .bs-bg-51 {
     background-color: #333;
-}
-
-.bs-bg-153 {
-    background-color: #999;
 }
 
 .bs-bg-102 {
@@ -1305,8 +1294,8 @@ hr {
     background-color: #eee;
 }
 
-.bs-bg-169488{
-    background-color: #169488;
+.bs-bg-444{
+    background-color: #444;
 }
 
 .bs-bg-f2{
