--- a/css/common.css
+++ b/css/common.css
@@ -294,11 +294,8 @@ button {
 .calendar a:active {}
 
 .calendar .selected {
-    /*background: #baa071;*/
-    background: #169488;
-    color: white;
-    border-top: 0.5px solid;
-    border-bottom: 0.5px solid;
+    background: #eee;
+    font-weight: bold;
 }
 
 .calendar .start {
