--- a/js/layout/top.html
+++ b/js/layout/top.html
@@ -1,5 +1,5 @@
 <!--顶部-->
-<header id="header-nav" ms-if="!isShowMap" ms-controller="top" class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color: rgba(0,0,0,.5);padding: 0;box-shadow: none;">
+<header id="header-nav" ms-if="!isShowMap" ms-controller="top" class="mui-bar mui-bar-nav mui-text-center" style="height: 48px;background-color: #eee;padding: 0;box-shadow: none;">
     <!-- <div id="midnight" class="bs-bg-black bs-text-white" style="z-index: 3;width: 100vw;text-align: left;line-height: 32px;" ms-on-tap="goMidnight">
         <img src="img/midnight.png" alt="" style="width: 24px;float: left;margin: 4px 0 0 8px;">
         &nbsp;<strong>午夜特价房</strong> 震撼来袭！！！<span class="mui-icon mui-icon-closeempty" style="float: right;font-size: 32px;padding: 0px;margin: 0px;" ms-on-tap="closeMidnight"></span>
