--- a/css/city.css
+++ b/css/city.css
@@ -1,3 +1,19 @@
+.mapCenter {
+  background-image: url('../img/icon/icon-mapCenter.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-size: contain;
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -18px;
+  margin-top: -30px;
+  z-index: 9;
+}
+
 .bs-GeoBtn {
   width: 48px;
   height: 48px;
