--- a/js/layout/index-old.html
+++ b/js/layout/index-old.html
@@ -14,7 +14,7 @@
 		<script src="js/lib/jquery.min.js"></script>
 		<!--<script src="js/lib/jquery.stellar.min.js"></script>-->
 		<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-		<script src="js/lib/avalon.mobile.shim.min.js"></script>
+		<script src="js/lib/avalon.mobile.js"></script>
 		<script src="js/config.js"></script>
 		<script src="js/lib/swiper.min.js"></script>
 		<!--<script src="http://192.168.99.169:1234/target/target-script-min.js#anonymous"></script>-->
