--- a/js/layout/shell-manage.html
+++ b/js/layout/shell-manage.html
@@ -26,7 +26,7 @@
     </div>
     <script src="../js/lib/jquery.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script src="../js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="../js/lib/avalon.mobile.js"></script>
     <script src="../js/domainName.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/config.js"></script>
