--- a/js/layout/shell-register.html
+++ b/js/layout/shell-register.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../js/lib/os.js" ></script>
     <script src="../js/lib/mui.min.js"></script>
     <script src="../js/lib/jquery.min.js"></script>
-    <script src="../js/lib/avalon.mobile.shim.min.js"></script>
+    <script src="../js/lib/avalon.mobile.js"></script>
     <script src="../js/domainName.js"></script>
     <script src="../js/api.js"></script>
     <script src="../js/config.js"></script>
