--- a/css/common.css
+++ b/css/common.css
@@ -1018,9 +1018,10 @@ hr {
 
 .hotel {
     margin: 0 auto;
-    padding: 14px 10px 15px 10px;
+    padding: 15px;
     position: relative;
     background-color: #fff;
+    padding-top: 25px;
 }
 
 .hotel div {
@@ -1099,20 +1100,27 @@ hr {
 
 .order-list {
     margin-top: 0;
-    padding-left: 0;
+    padding: 0 15px;
     list-style-type: none;
 }
 
 .order-list .order-item {
     display: block;
     margin: 10px 0;
-    padding: 10px 0 10px 10px;
-    background-color: #fff;
+    padding: 10px 12px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    box-shadow: 0px 1px 3px 0px #bdbdbd;
 }
 
 .order-list .order-item .status {
     position: absolute;
-    right: 0px;
+    right: 15px;
+    display: block;
+    margin-top: 5px;
+    width: 56px;
+    text-align: center;
+    opacity: 0.8;
 }
 
 .order-list .order-item h5 {
@@ -1121,17 +1129,16 @@ hr {
 }
 
 .order-list .order-item button {
-    width: 100px;
+    width: 88px;
     padding-top: 2px;
     padding-bottom: 2px;
     margin: -5px;
-    border-radius: 0;
+    border: none;
 }
 
 .order-panel {
     background: #fff;
-    padding: 10px;
-    margin: 10px 0;
+    padding: 20px;
 }
 
 .order-panel-title {
@@ -1214,7 +1221,7 @@ hr {
 }
 
 .bs-text-yellow {
-    color: #ffbc1b !important;
+    color: #fdd942 !important;
 }
 
 .bs-text-fdd942 {
@@ -1283,7 +1290,7 @@ hr {
 }
 
 .bs-bg-yellow {
-    background-color: #ffbc1b;
+    background-color: #fdd942;
 }
 
 .bs-bg-eee {
@@ -1301,8 +1308,6 @@ hr {
 .bs-bg-bd{
     background-color: #bdbdbd;
 }
-
-
 
 .bs-type-tab {
     display: inline-table;
