--- a/css/common.css
+++ b/css/common.css
@@ -1018,7 +1018,7 @@ hr {
 
 .hotel {
     margin: 0 auto;
-    padding: 15px;
+    padding: 10px 20px;
     position: relative;
     background-color: #fff;
     padding-top: 25px;
@@ -1100,14 +1100,16 @@ hr {
 
 .order-list {
     margin-top: 0;
-    padding: 0 15px;
+    padding: 0 24px;
     list-style-type: none;
+    position: relative;
 }
 
 .order-list .order-item {
+    position: relative;
     display: block;
     margin: 10px 0;
-    padding: 10px 12px;
+    padding: 16px 12px;
     background-color: #f2f2f2;
     border-radius: 5px;
     box-shadow: 0px 1px 3px 0px #bdbdbd;
@@ -1115,7 +1117,7 @@ hr {
 
 .order-list .order-item .status {
     position: absolute;
-    right: 15px;
+    right: 0;
     display: block;
     margin-top: 5px;
     width: 56px;
@@ -1138,7 +1140,7 @@ hr {
 
 .order-panel {
     background: #fff;
-    padding: 20px;
+    padding: 25px 20px 15px 20px;
 }
 
 .order-panel-title {
@@ -1177,7 +1179,7 @@ hr {
 }
 
 .bs-text-larger {
-    font-size: 17px;
+    font-size: 18px;
 }
 
 .bs-text-16 {
