--- a/js/layout/shell-av2.html
+++ b/js/layout/shell-av2.html
@@ -27,7 +27,7 @@
     <script src="js/lib/jquery.min.js"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="js/lib/avalon.js"></script>
-    <!-- <script src="js/lib/avalon.modern.js"></script> -->
+    <script src="js/lib/avalon.modern.js"></script>
     <script src="js/lib/os.js" ></script>
     <script src="js/domainName.js"></script>
     <script src="js/api.js"></script>
