订单详情对接API，表盘日历样式修改

--- a/css/common.css
+++ b/css/common.css
@@ -294,7 +294,7 @@ button {
 .calendar a:active {}
 
 .calendar .selected {
-    background: #eee;
+    background: #fdd942;
     font-weight: bold;
 }
 
