解决高清屏 canvas 模糊问题

--- a/css/city.css
+++ b/css/city.css
@@ -169,6 +169,7 @@
     border-radius: 25px;
     background-color: #444;
     box-shadow: 0 2px 2px 1px #BDBDBD;
+    margin-bottom: 5px;
 }
 
 .calendar-icon {
